# StimIQ

./: .dockerignore  .gitignore  CITATION.cff  LICENSE  README.md  TREATMENT_GOALS.md  cloudbuild.yaml  test_treatment_goals.py
.github/workflows/: backend-docker-gcp.yml
patient-app/: .env.example  README.md  app.json  package-lock.json  package.json
patient-app/app/: _layout.tsx  daily-report.tsx  imu-tracking.tsx  index.tsx
patient-app/app/standard-tests/: index.tsx
patient-app/app/standard-tests/finger-tapping/: session.tsx  start.tsx
patient-app/app/standard-tests/hand-movement/: session.tsx  start.tsx
patient-app/app/standard-tests/speech-task/: session.tsx  start.tsx
patient-app/components/: Card.tsx  ScreenWrapper.tsx
patient-app/lib/: apiClient.ts  types.ts
patient-app/patient/: promQuestions.ts
patient-app/patient/components/: ConsentCard.tsx  PatientPromForm.tsx
patient-app/patient/utils/: visitorIdentity.ts
src/backend/: .dockerignore  .env  .env.example  Bayes.py  Dockerfile  README.md  config.py  database.py  docker-compose.yml  main.py  model.py  monte_carlo_loss.py  pyproject.toml  run_bayes_iterations.py
src/backend/api/: __init__.py  auth.py  clinician.py  hand_tracking.py  imu.py  patients.py  prom.py  speech.py  treatment_goals.py
src/backend/api/schemas/: __init__.py  agent.py  auth.py  dbs_state.py  dbs_tuning.py  hand_tracking.py  imu.py  imu_analysis.py  patient.py  prom.py  simulation.py  speech.py  treatment_goals.py
src/backend/api/services/: __init__.py  agent.py  dbs_state.py  dbs_tuning.py  hand_tracking.py  imu.py  imu_signal_processing.py  patient_identity.py  simulation.py  speech.py  test_dbs_services.py
src/backend/artifacts/: baseline_rms_cache.json
src/backend/auth/: __init__.py  session.py
src/backend/configs/: bayes.yaml
src/backend/dbs-agent/: agent.env.example  agent.py  agent_old.py
src/backend/dbs_agent/: agent.env.example  agent.py  agent_legacy.py
src/backend/hand_tracking/: __init__.py  finger_tapping.md  schemas.py  service.py
src/backend/loss/: __init__.py  loss.py  model.pt
src/frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
src/frontend/src/: App.tsx  index.css
src/frontend/src/api/: analysisReport.ts  dbsState.ts  dbsTuning.ts  promTests.ts  treatmentGoals.ts
src/frontend/src/clinician/: useDbsState.ts  useDbsTuning.ts  useTreatmentGoals.ts
src/frontend/src/clinician/components/: CreatePatientForm.tsx  CreatePatientModal.tsx  DBSParameterComparison.tsx  DBSParameterGauge.tsx  DbsStateSection.tsx  DbsTuningSection.tsx  IMUUploadModal.tsx  (+7 more)
src/frontend/src/contexts/: ClinicianModalContext.tsx
src/frontend/src/layouts/: ClinicianLayout.tsx  PatientLayout.tsx
src/frontend/src/lib/: apiClient.ts  mockData.ts  types.ts
src/frontend/src/patient/: promQuestions.ts  usePromTests.ts
src/frontend/src/routes/: Router.tsx  clinicianRoutes.tsx  patientRoutes.tsx
src/sim/: README.md  __init__.py  factory.py  main.py  pyproject.toml  simulator.py
src/sim/api/: base.py  registry.py  treatment_goals.py  types.py
src/sim/artifacts/loss_model/: metrics.json
src/sim/artifacts/loss_model/checkpoints/: best_model.json  xgboost_metrics_fft.json  xgboost_model.json  xgboost_model_fft.json
src/sim/brain/: bgtcs_meanfield.py  null.py  utils.py
src/sim/cohort/: sampling.py  transforms.py
src/sim/config/: default.yaml  runtime.py
src/sim/config/brain/: bgtcs.yaml
src/sim/config/cohort/: default.yaml
src/sim/config/noise/: imu.yaml
src/sim/config/output/: default.yaml
src/sim/config/periphery/: springmass6dof.yaml
src/sim/config/stimulation/: default.yaml
src/sim/config/sweep/: default.yaml
src/sim/datasets/: generate.py  io.py
src/sim/docs/: BGTCS.md  MANIFEST.md  PADS_dataset.md  loss_model.md  models_to_test.md  severity_proxy.md
src/sim/loss_model/: __init__.py  data.py  models.py  preprocessing.py  train_compare.py  train_xgboost.py
src/sim/periphery/: mixins.py  opensim_stub.py  springmass_6dof.py
src/sim/scripts/: generate_test_csv.py  sanity_checks.py  sim_one.py  sim_opensim_video.py  sim_sweep.py
src/sim/sensor/: imu.py  noise.py
src/sim/stimulation/: encoding.py  waveforms.py
src/sim/tests/: test_determinism.py  test_loss_model_data.py  test_opensim_stub.py  test_shapes.py  test_stability.py
src/sim/tools/: viz.py
(+38 files in other folders)
