[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for StimIQ - Deep Brain Stimulation parameter optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "supabase>=2.9.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
]
