[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim"
version = "0.1.0"
description = "Simulation backbone for stimulation-to-IMU synthetic data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0.0",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "matplotlib>=3.10.8",
]

[project.optional-dependencies]
brain = [
  "jax>=0.4.30",
  "jaxlib>=0.4.30",
  "diffrax>=0.6.0",
  "equinox>=0.11.0",
  "jaxtyping>=0.2.36",
  "beartype>=0.19.0",
]
io = [
  "supabase>=2.15.3",
]
ml = [
  "xgboost>=2.1.0",
  "torch>=2.4.0",
  "tqdm>=4.66.0",
  "scikit-learn>=1.8.0"
]

[tool.setuptools]
packages = [
  "sim",
  "sim.api",
  "sim.brain",
  "sim.cohort",
  "sim.config",
  "sim.datasets",
  "sim.periphery",
  "sim.loss_model",
  "sim.scripts",
  "sim.sensor",
  "sim.stimulation",
  "sim.tests",
  "sim.tools",
]

[tool.setuptools.package-dir]
"sim" = "."
"sim.api" = "api"
"sim.brain" = "brain"
"sim.cohort" = "cohort"
"sim.config" = "config"
"sim.datasets" = "datasets"
"sim.periphery" = "periphery"
"sim.loss_model" = "loss_model"
"sim.scripts" = "scripts"
"sim.sensor" = "sensor"
"sim.stimulation" = "stimulation"
"sim.tests" = "tests"
"sim.tools" = "tools"

[tool.setuptools.package-data]
"sim.config" = ["*.yaml", "*/*.yaml"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
